Change the id of contact in navigation bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- BUG: Wrong ID for projects -->
             <li><a href="#project">Projects</a></li>
             <!-- BUG: Wrong ID for contact -->
-            <li><a href="#contact-me">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -33,6 +33,8 @@
 
     <!-- BUG: Projects section is missing -->
     <section id="project" class="project-section">
+        <h2>Project</h2>
+        
         <div class="card">
             <h3>Project One</h3>
             <br><hr>
